# aiter

./: .clang-format  .clang-tidy  .gitignore  CONTRIBUTE.md  pyproject.toml  requirements.txt  setup.py
.githooks/: pre-commit
.github/scripts/: check_deps.sh
.github/workflows/: deps.yaml  ruff.yaml  sglang_downstream.yaml
aiter/: __init__.py  bert_padding.py  fused_moe.py  fused_moe_bf16_asm.py  int4_utils.py  mla.py  paged_attn.py  rotary_embedding.py  test_common.py  test_mha_common.py  tuned_gemm.py
aiter/aot/: __init__.py  asm_mla_decode_fwd.py  pa.py  pa_ragged.py
aiter/configs/: a4w4_blockscale_tuned_gemm.csv  (+11 more)
aiter_logs/: run.py
csrc/: rocm_ops.cpp
docs/: aiter_container_nonroot_setup.md
gradlib/: setup.py
op_tests/: test_activation.py  test_aiter_add.py  test_aiter_addInp.py  test_aiter_sigmoid.py  test_batch_prefill.py  test_batched_gemm_a8w8.py  test_batched_gemm_bf16.py  test_communication.py  test_custom_allreduce.py  test_custom_allreduce_fp8.py  test_gemm.py  test_gemm_a4w4.py  test_gemm_a4w4_blockscale.py  test_gemm_a8w8.py  test_gemm_a8w8_blockscale.py  test_kvcache.py  test_kvcache_blockscale.py  test_layernorm2d.py  test_layernorm2dFusedAddQuant.py  test_mha.py  test_mha_varlen.py  test_mla.py  test_moe.py  test_moeTopkSoftmax.py  test_moe_2stage.py  test_moe_blockscale.py  test_moe_ep.py  test_moe_sorting.py  test_moe_sorting_mxfp4.py  test_moe_tkw1.py  test_pa.py  test_pa_mtp.py  test_pa_ragged.py  test_pa_v1.py  test_quant.py  test_rmsnorm2d.py  test_rmsnorm2dFusedAddQuant.py  test_rope.py  test_sampling.py  test_smoothquant.py
(+2203 files in other folders)
